[metadata]
name = fft-image-compression
version = file: src/fft_image_compression/VERSION

author = "Bishal Neupane"

description = "Image Compression and Decompression using Fast Fourier Transform",
long_description = file: README.md, LICENSE,
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-V3 License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires = file: ./requirements.txt
package_dir = 
    = src
packages=find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = fft_image_compression.image_operations:start